# SOKUHO

./: CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
data/: analysis_dataset.csv  gift_analysis_dataset.csv  macro_indicators.csv
data/macro_raw/: avg_wage_yoy.csv  bsi.csv  cci.csv  cpi_food.csv  dept_store_sales.csv  gdp_yoy.csv  inbound_tourists.csv  lunar_calendar.csv  retail_food_index.csv  retail_trade_yoy.csv  (+5 more)
db/: schema_analysis.sql  schema_macro.sql  seed_gift_mapping.sql  seed_stores.sql  views_analysis.sql  views_analysis_powerbi.sql  views_prediction.sql
docs/: SDD_KOUSEIHI_AND_ANALYSIS.md  analysis_report.md
models/: gift_gift_combined_best.pkl  gift_gift_combined_rf.pkl  gift_gift_high_best.pkl  gift_gift_high_rf.pkl  gift_gift_large_best.pkl  gift_gift_large_rf.pkl  gift_gift_low_best.pkl  gift_gift_low_rf.pkl  v2_gift_gift_combined_best.pkl  v2_gift_gift_high_best.pkl  v2_gift_gift_large_best.pkl  v2_gift_gift_low_best.pkl
outputs/: corr_matrix_long.csv  feature_importance_GIFT_COMBINED.csv  feature_importance_GIFT_LARGE.csv  feature_importance_GIFT_LOW.csv  mape_summary.csv  model_compare_2024.csv  ols_GIFT_COMBINED.txt  ols_GIFT_HIGH.txt  ols_GIFT_LARGE.txt  ols_GIFT_LOW.txt  v2_feature_importance_GIFT_COMBINED.csv  v2_feature_importance_GIFT_HIGH.csv  v2_feature_importance_GIFT_LARGE.csv  v2_feature_importance_GIFT_LOW.csv  v2_mape_summary.csv  v2_model_compare.csv
scripts/: build_analysis_dataset.py  build_gift_dataset.py  load_macro.py  prepare_macro_raw.py  run_gift_analysis.py  run_gift_analysis_v2.py
