[project]
name = "sokuho"
version = "0.1.0"
description = "SOKUHO PDF to SQL Server ETL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.0",
    "pandas>=2.2.0",
    "pyodbc>=5.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "joblib>=1.4.0",
    "lunardate>=0.2.2",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etl"]
